--- a/.env.default
+++ b/.env.default
@@ -4,7 +4,6 @@ APACHE_LOG_LEVEL=debug
 APACHE_PORT=8009
 API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
-BRANCH_STAGING=
 CACHE_CONTROL=no-cache
 DATAGEOADMINHOST=sys-data.dev.bgdi.ch
 DBHOST=pg-geodata-replica.bgdi.ch
@@ -14,10 +13,8 @@ DEBUG=True
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
 GEODATA_STAGING=test
-GIT_BRANCH=
 HOST=sys-api3.dev.bgdi.ch
 HTTP_PROXY=http://ec2-52-28-118-239.eu-central-1.compute.amazonaws.com:80
-IMAGE_TAG=staging
 INSTALLDIR=/var/www/vhosts/mf-chsdi3/private/chsdi
 KEEP_VERSION=true
 KML_TEMP_DIR=/var/local/print/kml
@@ -27,15 +24,13 @@ MODWSGI_USER=www-data
 NGINX_PORT=8009
 PRINT_ENV=dev
 PRINT_LOGLEVEL=10
-PRINT_SERVER_HOST=service-print.dev.bgdi.ch
+PRINT_SERVER_HOST=sys-print.dev.bgdi.ch
 PRINT_TEMP_DIR=/var/local/print
 PUBLIC_BUCKET_HOST=sys-public.dev.bgdi.ch
 RANCHER_LABEL=dev
 ROBOTS_FILE=robots_prod.txt
 SERVER_PORT=6543
-SPHINXHOST=service-sphinxsearch.dev.bgdi.ch
-TOMCAT_PORT=8011
-TOMCAT_SERVER_URL=//vpc-alb-bgdi-dev.intra.bgdi.ch
+SPHINXHOST=sys-api3.dev.bgdi.ch
 VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
 WMSHOST=sys-wms.dev.bgdi.ch
 WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
