BGDIINF_SB-2415: feedback lthaj, ltshb

--- a/Makefile.frankfurt
+++ b/Makefile.frankfurt
@@ -18,13 +18,6 @@ INSTALL_DIRECTORY := .venv
 # default configuration
 ENV_FILE ?= .env.default
 
-define load_env
-    $(eval ENV := $(1))
-    @echo " - load env $(ENV)"
-    $(eval include $(1))
-    $(eval export)
-endef
-
 # Note the `fi`is a hack for `rm`(which didn't exist for a long time!)
 # https://github.com/geoadmin/mf-chsdi3/blob/966b5471dfad9f9c77ca44a089b81419c4a6311b/chsdi/lib/helpers.py#L140-L142
 AVAILABLE_LANGUAGES := de fr it fi en
@@ -155,10 +148,6 @@ all: setup environ lint fixrights doc chsdi/static/css/extended.min.css rss
 setup: .venv translate $(NODE_MODULES)
 
 
-LoadEnvFile:
-	$(call load_env, ${ENV_FILE})
-
-
 requirements-py3.txt:
 	@echo "${GREEN}requirements-py3.txt has changed...${RESET}";
 
@@ -171,8 +160,9 @@ requirements-py3.txt:
 
 
 .PHONY: environ
-environ: LoadEnvFile
+environ:
 # FIXME: nosetests is still using development.ini
+	export $(shell cat $(ENV_FILE)) && \
 	export DOCKER_IMG_LOCAL_TAG=${DOCKER_IMG_LOCAL_TAG} && \
 	export CURRENT_DIRECTORY=${CURRENT_DIRECTORY} && \
 	envsubst < base.ini.in > base.ini && \
@@ -228,7 +218,8 @@ dockerbuild: guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD guard-HTTP_PO
 
 
 .PHONY: dockerrun
-dockerrun: LoadEnvFile guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD guard-HTTP_PORT
+dockerrun: guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD guard-HTTP_PORT
+	export $(shell cat $(ENV_FILE)) && \
 	docker run \
 		-it \
         -p ${HTTP_PORT}:80 \
