--- a/Makefile.frankfurt
+++ b/Makefile.frankfurt
@@ -194,7 +194,7 @@ chsdi/static/info.json:
 
 
 .PHONY: config-templates
-config-templates: guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD chsdi/static/info.json
+config-templates: guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD chsdi/static/info.json
 # FIXME: nosetests is still using development.ini
 	export $(shell cat $(ENV_FILE)) && \
 	export CURRENT_DIRECTORY=${CURRENT_DIRECTORY} && \
@@ -211,7 +211,7 @@ config-templates: guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPA
 # Generate a basically empty gettext `chsdi` domain.
 # Translation are dynamic, the domain is updated at runtime directly from the BOD
 .PHONY: translate
-translate: .venv guard-ENV_FILE
+translate: .venv
 	@echo "${GREEN}Building the translation...${RESET}";
 	${PYTHON} setup.py extract_messages
 	for lng in ${AVAILABLE_LANGUAGES}; do \
@@ -245,7 +245,7 @@ dockerbuild: build
 
 
 .PHONY: dockerrun
-dockerrun: guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD
+dockerrun: guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD
 	docker run \
 	    -it \
 	    --network=host \
@@ -257,7 +257,7 @@ dockerrun: guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD
 
 
 .PHONY: dockerrun-shell
-dockerrun-shell: guard-ENV_FILE guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD
+dockerrun-shell: guard-OPENTRANS_API_KEY guard-PGUSER guard-PGPASSWORD
 	docker run \
 	    -it \
 	    --network=host \
@@ -276,7 +276,7 @@ dockerpush:
 
 .PHONY: test
 test: config-templates build
-	export $(shell cat $(ENV_FILE)) && python ./scripts/pg_ready.py
+	export $(shell cat $(ENV_FILE)) && ${PYTHON} ./scripts/pg_ready.py
 	PYTHONPATH=${PYTHONPATH} S3_TESTS=$(S3_TESTS) ${NOSE} --verbosity=2  --cover-erase  tests/ -e "(.*e2e.*|test_search|test_sphinxapi)"
 
 
