--- a/requirements-py3.txt
+++ b/requirements-py3.txt
@@ -47,7 +47,8 @@ repoze.lru==0.7
 requests==2.22.0
 Shapely==1.6.4.post2
 simplejson==3.16.0
-six==1.12.0
+ # TODO: clean-up when only Python 3.x and no longer 2.x is in use
+six==1.16.0
 Sphinx==1.8.5
 sphinx-rtd-theme===0.4.3
 SQLAlchemy==1.3.24
