--- a/prod.ini.in
+++ b/prod.ini.in
@@ -5,4 +5,4 @@
 # Use this file exclusively on docker/frankfurt/python3 and k8s int and prod environment
 
 [app:main]
-use = config:base.ini
+use = config:app_version.ini
