--- a/base.ini.in
+++ b/base.ini.in
@@ -102,10 +102,23 @@ keys = console
 class = StreamHandler
 args = (sys.stdout,)
 level = INFO
-formatter = generic
+formatter = json
 
 [formatters]
-keys = generic
+keys = generic, json
 
 [formatter_generic]
 format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+[formatter_json]
+class = logging_utilities.formatters.json_formatter.JsonFormatter
+format: {
+        "time": "asctime",
+        "level": "levelname",
+        "logger": "name",
+        "module": "module",
+        "function": "funcName",
+        "pid_tid": "%(process)x/%(thread)x",
+        "message": "message",
+        "exc_info": "exc_info"
+    }
