--- a/.env.ci
+++ b/.env.ci
@@ -1,5 +1,8 @@
 APACHE_BASE_PATH=main
 APACHE_ENTRY_PATH=
+PY_ROOT_LOG_LEVEL=DEBUG
+PY_CHSDI_LOG_LEVEL=DEBUG
+PY_SQLALCHEMY_LOG_LEVEL=WARN
 API_URL=//sys-api3.dev.bgdi.ch
 DATAGEOADMINHOST=sys-data.dev.bgdi.ch
 DYNAMIC_TRANSLATION=1
