--- a/Makefile.frankfurt
+++ b/Makefile.frankfurt
@@ -76,7 +76,7 @@ GIT_HASH ?= $(shell git rev-parse HEAD)
 GIT_HASH_SHORT ?= $(shell git rev-parse --short HEAD)
 GIT_BRANCH ?= $(shell git symbolic-ref HEAD --short 2>/dev/null)
 GIT_DIRTY ?= $(shell git status --porcelain)
-GIT_TAG ?= $(shell git describe --tags || echo "no version info")
+GIT_TAG ?= $(shell git describe --tags --dirty || echo "no version info")
 GIT_COMMIT_DATE ?= $(shell git log -1  --date=iso --pretty=format:%cd)
 DOCKER_IMAGE_TAG ?= local-$(USER)-$(GIT_HASH_SHORT)
 DOCKER_IMG_LOCAL_TAG_PATH = $(DOCKER_REGISTRY)/$(SERVICE_NAME):$(DOCKER_IMAGE_TAG)
@@ -198,10 +198,10 @@ set-app_version:
 	export GIT_HASH_SHORT="$(GIT_HASH_SHORT)" && \
 	export GIT_COMMIT_DATE="$(GIT_COMMIT_DATE)" && \
 	export GIT_HASH="$(GIT_HASH)" && \
+	export GIT_DIRTY="$(GIT_DIRTY)" && \
 	export PYTHON_VERSION="$(PYTHON_VERSION)" && \
 	export CURRENT_DATE="$(CURRENT_DATE)" && \
-	envsubst < info.json.in > chsdi/static/info.json && \
-	envsubst < base_version.ini.in > base_version.ini
+	envsubst < chsdi/static/info.json.in > chsdi/static/info.json
 
 
 .PHONY: config-templates
@@ -388,7 +388,6 @@ guard-%:
 
 .PHONY: clean
 clean:
-	rm -f base_version.ini
 	rm -f base.ini
 	rm -f production.ini
 	rm -f development.ini
