--- a/base.ini.in
+++ b/base.ini.in
@@ -7,6 +7,7 @@
 
 [app:main]
 use = egg:chsdi
+app_version=${APP_VERSION}
 entry_path = ${APACHE_ENTRY_PATH}
 available_languages = de fr it en rm
 
