Fixed LINKEDDATAHOST for Frankfurt setup after merge from master

--- a/.env.ci
+++ b/.env.ci
@@ -10,7 +10,7 @@ GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
 HOST=sys-api3.dev.bgdi.ch
 HTTP_PROXY=http://ec2-52-28-118-239.eu-central-1.compute.amazonaws.com:80
 KML_TEMP_DIR=/var/local/print/kml
-LINKEDDATAHOST=https://ld.geo.admin.ch
+LINKEDDATAHOST=https://geo.ld.admin.ch
 PUBLIC_BUCKET_HOST=sys-public.dev.bgdi.ch
 SERVER_PORT=6543
 SPHINXHOST=sys-api3.dev.bgdi.ch
