--- a/.env.default
+++ b/.env.default
@@ -21,7 +21,7 @@ HTTP_PROXY=http://ec2-52-28-118-239.eu-central-1.compute.amazonaws.com:80
 INSTALLDIR=/var/www/vhosts/mf-chsdi3/private/chsdi
 # FIXME: KML_TEMP_DIR can probably be removed in context of https://jira.swisstopo.ch/browse/BGDIINF_SB-2456
 KML_TEMP_DIR=/var/local/print/kml
-LINKEDDATAHOST=https://ld.geo.admin.ch
+LINKEDDATAHOST=https://geo.ld.admin.ch
 MODWSGI_CONFIG=development.ini
 MODWSGI_USER=www-data
 PUBLIC_BUCKET_HOST=sys-public.dev.bgdi.ch
